🧪 Test: added cypress e2e test

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "author": "Festim Nuredini",
   "private": true,
+  "scripts": {
+    "cy:test": "cypress run",
+    "cy:open": "cypress open"
+  },
   "devDependencies": {
     "cypress": "^13.8.1"
   }
