--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "exclude": ["cypress.config.ts", "cypress", "node_modules"]
 }
